--- a/lambdacalccalc.cabal
+++ b/lambdacalccalc.cabal
@@ -19,8 +19,8 @@ extra-source-files:  CHANGELOG.md
 
 executable lambdacalccalc
   main-is:             Main.hs
-  -- other-modules:
+  other-modules:       Parser, Lambda, Absyn
   -- other-extensions:
-  build-depends:       base >=4.13 && <4.14
+  build-depends:       array, base >=4.13 && <4.14 
   hs-source-dirs:      src
   default-language:    Haskell2010
